--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,7 +27,7 @@ header{
     background-image: url("../design1_image1.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    gap: 100px;
+    gap: 70px;
 }
 
 #company-name{
@@ -91,9 +91,12 @@ a,a:active,a:visited{
 }
 /* ***Main content*** */
 section{
-    right:0;
-    width: 60%;
+    width: 100%;
     height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2%;
 }
 
 .idented{
@@ -110,25 +113,25 @@ h5{
 p{
     font-size: 0.8em;
 }
-
-section{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2%;
-    
-}
-
-article{
-    width: 25%;
-    color: var(--color6);
+.text-container{
     background-color: var(--color3);
     box-shadow: 0 4px 8px 0 var(--color4);
     margin-bottom: 25px;
     border: var(--border-template) var(--color3);
     border-radius: var(--border-radius);
+    color:var(--color6);
 }
 
+article{
+    max-height: 15rem;
+    width: 25%;
+    color: var(--color6);
+    background-color: var(--color3);
+    box-shadow: 0 4px 8px 0 var(--color4);
+    border: var(--border-template) var(--color3);
+    border-radius: var(--border-radius);
+}
+/* ***card*** */
 .card-image{
     width: 100%;
     height: 60%;
@@ -138,3 +141,34 @@ article{
     text-align: center;
     padding: 10px 20px;
 }
+/* ***slide *** */
+.slide-title{
+    text-align: center;
+}
+.slide-image{
+    margin-top: -10px;
+    height: 70%;
+    width: 100%;
+    border-radius:40px;
+}
+.slide-overlay{
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+    z-index: 3;
+    background-color: var(--color3);
+    border-radius: 40px;
+}
+.slide-container:hover .slide-overlay {
+    height: 75%;
+    transform: translateY(-100%);
+  }
+.slide-text{
+    color: var(--color6);
+    font-size: 0.7rem;
+}
+
+
+
+
