--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -114,12 +114,15 @@ p{
     font-size: 0.8em;
 }
 .text-container{
+    font-size: 1.5rem;
+    font-weight: 700;
     background-color: var(--color3);
     box-shadow: 0 4px 8px 0 var(--color4);
     margin-bottom: 25px;
+    background-color: var(--color3);
     border: var(--border-template) var(--color3);
-    border-radius: var(--border-radius);
     color:var(--color6);
+    width: 50%;
 }
 
 article{
@@ -168,7 +171,10 @@ article{
     color: var(--color6);
     font-size: 0.7rem;
 }
-
+/* ***rules*** */
+.alpha-list{
+    list-style-type: lower-alpha;
+}
 
 
 
