--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,7 @@
     --color4:#201915;
     --color5:#fefdfd;
     --color6:#c3563b;
+    --color7:#7e7e7e;
     --border-radius:50px;
     --border-template:10px solid;
 }
@@ -123,6 +124,8 @@ p{
     border: var(--border-template) var(--color3);
     color:var(--color6);
     width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 article{
@@ -175,6 +178,40 @@ article{
 .alpha-list{
     list-style-type: lower-alpha;
 }
-
+.text-title{
+    width: 100%;
+    text-align: center;
+    background-color: var(--color6);
+    color: var(--color3);
+}
+li b{
+    text-decoration:underline;
+}
+.text-small{
+    font-size: 1.2rem;
+    font-weight: 100;
+}
+.inline-paragraphs{
+    display: flex;
+    justify-content: space-between;
+}
+table{
+    color: var(--color4);
+    border: 2px solid var(--color4);
+    border-collapse: collapse;
+}
+table, td, th{
+    border: 1px solid var(--color4);
+}
+tr{
+    background-color: var(--color5);
+}
+th{
+    background-color: var(--color4);
+    color: var(--color5);
+}
+tr:nth-child(even){
+    background-color:var(--color7);
+}
 
 
