--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -227,12 +227,27 @@ tr:nth-child(even){
 form{
     display: flex;
     flex-direction: column;
+    background-color: var(--color2);
+    color: var(--color4);
+    padding: 5%;
 }
-label, input{
+label{
     font-size: 1rem;
+    width: 30%;
 }
-figure{
-    border: 1px solid var(--color4);
+input{
+    font-size: 1rem;
+    padding: 2%;
+    margin-bottom: 5%;
+}
+fieldset{
+    background-color: var(--color1);
+}
+.form-button{
+    background-color: var(--color1);
+    padding:2%;
+    
+
 }
 /* ***Maps*** */
 div.map-container{
